--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 	/* Keyframes for the fade-in */
 @-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 .top {
 	line-height:32px;
@@ -44,19 +45,18 @@
 	 width        :20%;
 }
 .head-menu li a{
-	padding-bottom:45px;
 	background-color:transparent;
 	font-size:18px;
 	font-style:italic;
 	font-family: Palatino, Georgia, serif;
-	padding-top:45px;
 	color:#5E5E5E;
+	line-height:80px;
 }
 .head-menu li a:hover{
-	padding-bottom:45px;
+	line-height:80px;
 	background-color:transparent;
-	padding-top:45px;
-	color:#9BD4F1;
+	color:#639EDB;
+	transition: all 0.3s ease 0s;
 }
 .head-menu ul {
 	 width:100%;
@@ -106,22 +106,25 @@
 	 opacity:0.9;
 	 position:relative; 
 	 height:100px;
-	 z-index:999 !important;
+	 z-index:4 !important;
 	 width:100%;
 }
 .head-menu.shrink {
 	 height:80px;
-	 line-height:0;
+	 line-height:80px;
 	 z-index:999 !important;
 }
 .head-menu.shrink a {
-	padding:30px;
+	 line-height:52px;
 	 z-index:999 !important;
 }
 .head-menu.shrink a:hover {
-	padding:30px;
+	 line-height:52px;
 }
 
+.head-menu.shrink li:hover ul {
+	top:-10px;
+}
 
 .item.active {
 	position:relative;
@@ -390,7 +393,7 @@ a.learn-more:hover{
 	 color:#88B1E1;
 }
 .text-pink{
-	 color:#F4769C;
+	 color:#eb639c;
 }
 .text-medium{
 	 font-size:20px;
@@ -668,10 +671,6 @@ a.learn-more:hover{
     color: white;
     font-weight: 900;
 }
-.text-black{
-	color:black;
-	 
-}
 .gallery-div{
 	background-image: url("../img/gallery/gallery-bg.jpg");
 	height:400px;
@@ -799,4 +798,242 @@ a.learn-more:hover{
 .slick-slide{
 	text-align: center !important;    
 	display: table-cell;
+}
+#bs-navbar ul li ul{
+	 visibility:hidden;
+	 background-color:#FFFFFF;
+	 color:#4d94ff;
+	 list-style-type: none;
+	 width:120%;
+	 white-space: nowrap;
+	 opacity:0;
+	 top:104px;
+	 position:absolute;
+	 z-index:10;
+	 border-top:4px solid #F05E9D;
+	 padding:0 20px;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+}
+#bs-navbar ul li ul li{
+	text-align:left;
+	border-bottom: 1px solid #d9d9d9;
+	width:70%;
+}
+#bs-navbar ul li ul a{
+	 text-decoration:none;
+	 line-height:55px;
+	 font-size:16px;
+	 font-style:normal !important;
+}
+
+#bs-navbar ul li:hover ul{
+	transition: all 500ms ease;
+	visibility:visible;
+	opacity:1;
+}
+#bs-navbar ul li:hover a{
+color:#639EDB;
+}
+.about-us-head{
+	width:100%;
+	position:relative;
+	z-index:-1;
+	height:297px;
+	overflow:hidden;
+}
+.about-us-head img{
+	position:absolute;
+	top:-160px;
+
+	left:-150px;
+	z-index:-2;
+	width:1776px;
+}
+.about-us-head-title{
+	width:100%;
+	position:absolute;
+	top:80px;
+}
+.about-main-title{
+	 font-size:61px;
+	 font-weight:900;
+}
+.text-black{
+	 color:#5e5e5e;
+}
+.about-main-subtitle{
+	 font-size:23px;
+}
+.about-article{
+	padding:76px 0 0 0;
+	z-index:10;
+	background-color:white;
+	position:relative;
+}
+.about-article h4{
+	 font-weight:900;
+	 color:black !important;
+}
+.about-article .row{
+	padding:27px 0;
+}
+.about-article p{
+	line-height:29px;
+	font-size:16px;
+}
+.about-testimonial{
+	 background-image: url('../img/skin-care-about/title-bg-2.jpg');
+	 height:500px;
+}
+.about-text-testimonial{
+	 margin:auto 30%;
+	 color:white;
+	 top:0;
+	 text-align:center;
+	 padding:105px 0;
+}
+.about-text-testimonial h2{
+	font-size:30px;
+	font-weight:900;
+	padding-bottom:39px;
+}
+.about-text-testimonial p{
+	font-size:20px;
+	font-weight:normal;
+}
+.about-testimonial-name{
+	 padding-top:20px;
+}
+.imag-circle{
+	background-color:#3E3E3E;
+	width: 100px; 
+	height: 100px; 
+	margin:0 auto;
+	-moz-border-radius: 50px; 
+	-webkit-border-radius: 50px; 
+	border-radius: 50px;
+}
+.imag-circle i{
+	color:#639EDB;
+	font-size:30px;
+	text-align:center;
+	vertical-align:middle;
+	display:inline-block;
+	margin-top:33px;
+}
+.about-icons h3{
+	 padding:20px 0;
+}
+.about-icons p{
+	font-size:17px;
+	line-height:29px;
+}
+
+.about-icons {
+	background-color:#F7F7F7;
+	padding:40px 0;
+}
+.about-story {
+	padding: 82px 0;
+}
+.about-story .row{
+	padding: 20px 0;
+
+}
+.about-story h2{
+	padding:0 0 30px;
+}
+.about-story p{
+	font-size:17px;
+	line-height:29px;
+	padding:0 0 30px;
+}
+.about-pink{
+   background-color:#F374A9;	
+   padding:40px 0 89px 0;
+   color:white;
+   text-align:center;
+}
+.about-pink h1{
+	padding:20px 0;
+}
+.regular-text{
+	font-size:22px;
+	line-height:29px;
+}
+
+.service-portofolio ul{
+	list-style-type:none;
+}
+.service-portofolio a{
+	text-decoration:none;
+	color:#F374A9;	
+	font-size:16px;
+}
+.service-portofolio li{
+	border-bottom:1px solid #d9d9d9;;	
+	width:100%;
+	padding:20px;
+}
+.service-portofolio a:hover{
+	color:#88B1E1;	
+	text-decoration:none;
+	transition: all 0.3s ease 0s;
+}
+.service-portofolio img{
+	width:100%;
+}
+.row-service{
+	padding: 79px  0;
+	 
+}
+.bold{
+	 font-weight:bold;
+}
+.no-border td{
+    border: none;
+}
+.rowMarginBottom{
+	 margin-bottom:67px;
+}
+.border-blacken{
+	padding:0 !important;
+	 position:relative;
+	 overflow:hidden;
+}
+.border-blacken:after {
+    content:'\A';
+    position:absolute;
+    width:100%; height:100%;
+    top:0; left:0;
+    background:rgba(0,0,0,0.6);
+    opacity:0;
+    transition: all 0.5s;
+    -webkit-transition: all 0.5s;
+}
+.border-blacken:hover:after {
+    opacity:1;
+}
+.service-icon{
+	position:absolute;
+	top:130px;
+	left:190px;
+	color:white;
+	font-size:30px;
+	z-index:20;
+	opacity:0;
+}
+.border-item-about:hover .service-icon {
+	opacity:1;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+}
+.fadeInUpEffect{
+	 position:relative;
 }
