--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@
 @-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
+
 .top {
 	line-height:32px;
 	color : white;
@@ -159,6 +160,8 @@
 	height:100px;
 	width:800px;
 	padding-top:200px;
+	top:35px;
+	left:-248px;
 	color: #697785;
 	font-family: 'Taviraj', serif;
 	margin:auto 0;
@@ -166,6 +169,7 @@
 	padding-left:75px;
     margin-top: 25px;
     font-size: 21px;
+	position:absolute;
     text-align: center;
     -webkit-transition: opacity 2s ease-in;
     -moz-transition: opacity 2s ease-in;
@@ -176,7 +180,6 @@
 .wellcome_to {
 	 font-size:60px;	
 	 color:#697785;
-	 border-bottom : 1px double;
 }
 .skin{
 	 font-size:110px;	
@@ -1039,4 +1042,18 @@ color:#639EDB;
 }
 #service h2{
 	 padding-bottom:16px;
+}
+.caption-2{
+	position:absolute;
+   left:253px;	
+   top:267px;	
+	font-family: Palatino, Georgia, serif;
+	font-size:21px;
+}
+.caption-3{
+	position:absolute;
+	font-family: Palatino, Georgia, serif;
+   left:-100px;	
+	font-size:21px;
+   top:267px;	
 }
