--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,8 +103,7 @@
 	z-index:999;
 }
 .head-menu {
-	 background-color:#FDFDFD;
-	 opacity:0.9;
+	 background-color: rgba(253,253,253,0.9);
 	 position:relative; 
 	 height:100px;
 	 z-index:4 !important;
@@ -355,8 +354,11 @@ a.learn-more:hover{
     top:0; left:0;
     background:rgba(0,0,0,0.6);
     opacity:0;
-    transition: all 0.5s;
-    -webkit-transition: all 0.5s;
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
 }
 .treatment-slider .border-gallery:hover:after {
     opacity:1;
@@ -810,7 +812,7 @@ a.learn-more:hover{
 	 width:120%;
 	 white-space: nowrap;
 	 opacity:0;
-	 top:104px;
+	 top:101px;
 	 position:absolute;
 	 z-index:10;
 	 border-top:4px solid #F05E9D;
@@ -819,6 +821,9 @@ a.learn-more:hover{
 	-moz-transition: all 500ms ease;
 	-ms-transition: all 500ms ease;
 	-o-transition: all 500ms ease;
+}
+.head-menu.shrink ul li ul {
+	 top:80px !important;
 }
 #bs-navbar ul li ul li{
 	text-align:left;
@@ -1056,4 +1061,48 @@ color:#639EDB;
    left:-100px;	
 	font-size:21px;
    top:267px;	
+}
+.full-width{
+	 width:100%;
+}
+.rowMargin{
+	 margin-top:72px;
+}
+.treatment-related-caption{
+	 padding:10px 20px;
+	 background-color:#F8F8F8;
+	 font-size:20px;
+	 margin-bottom:50px;
+}
+.learn-more-orange {
+	padding:15px 20px;
+	border-radius:5px;
+	color:white;
+	background-color:#EC4933;
+	margin-top:50px;
+	display:inline-block;
+}
+.learn-more-orange:hover {
+	text-decoration:none;
+	color:white;
+}
+.normal-list{
+	 list-style-type:none;
+}
+.faq-list li{
+	 padding:15px 20px;
+	 border-bottom:1px solid #d9d9d9;
+	 font-size:18px;
+}
+.faq-list a:hover{
+	-webkit-transition: all 500ms ease;
+	-moz-transition: all 500ms ease;
+	-ms-transition: all 500ms ease;
+	-o-transition: all 500ms ease;
+	transition: all 500ms ease;
+	text-decoration:none;
+	color: #1a75ff;
+}
+.no-decoration:hover, .no-decoration:focus{
+	 text-decoration:none;
 }
